--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/SimplePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/SimplePage.scala.html
@@ -16,11 +16,18 @@
 
 @this(layout: Layout)
 
-@()(implicit request: RequestHeader, messages: Messages)
+@(
+        h1: String,
+        bodyText: Option[String])(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @layout(pageTitle = Some("agent-registration-frontend")) {
-    <h1 class="govuk-heading-xl">agent-registration-frontend</h1>
-    <p class="govuk-body">@{messages("service.text")}</p>
+    <h1 class="govuk-heading-xl">h1</h1>
+    @bodyText.map {bodyText =>
+        <p class="govuk-body">@bodyText</p>
+    }
 }
 
 @{
