--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/SimplePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/SimplePage.scala.html
@@ -24,7 +24,7 @@
 )
 
 @layout(pageTitle = Some("agent-registration-frontend")) {
-    <h1 class="govuk-heading-xl">h1</h1>
+    <h1 class="govuk-heading-xl">@h1</h1>
     @bodyText.map {bodyText =>
         <p class="govuk-body">@bodyText</p>
     }
