--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/SimplePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/SimplePage.scala.html
@@ -23,7 +23,7 @@
         messages: Messages
 )
 
-@layout(pageTitle = Some("agent-registration-frontend")) {
+@layout(pageTitle = "agent-registration-frontend") {
     <h1 class="govuk-heading-xl">@h1</h1>
     @bodyText.map {bodyText =>
         <p class="govuk-body">@bodyText</p>
