[WG][APB-9685] User role page (Are you the owner of the business?)

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/register/UserRolePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/register/UserRolePage.scala.html
@@ -16,7 +16,6 @@
 
 @import uk.gov.hmrc.govukfrontend.views.html.components._
 @import uk.gov.hmrc.govukfrontend.views.Implicits.RichRadios
-@import uk.gov.hmrc.hmrcfrontend.views.Implicits.RichErrorSummary
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.controllers.routes
 
@@ -25,7 +24,6 @@
         govukRadios: GovukRadios,
         govukButton: GovukButton,
         formWithCSRF: FormWithCSRF,
-        govukErrorSummary: GovukErrorSummary,
         govukDetails: GovukDetails
 )
 
@@ -43,11 +41,7 @@
     messages(s"$key.title")
 }
 
-@layout(pageTitle = title, hasErrors = form.hasErrors) {
-
-    @if(form.errors.nonEmpty) {
-        @govukErrorSummary(ErrorSummary().withFormErrorsAsText(form))
-    }
+@layout(pageTitle = title, maybeForm = Some(form)) {
 
     <h2 class="govuk-caption-xl">@messages("about-application.title")</h2>
 
