[WG][APB-9685] User role page (Are you the owner of the business?), PR comments

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/register/UserRolePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/register/UserRolePage.scala.html
@@ -23,8 +23,7 @@
         layout: Layout,
         govukRadios: GovukRadios,
         govukButton: GovukButton,
-        formWithCSRF: FormWithCSRF,
-        govukDetails: GovukDetails
+        formWithCSRF: FormWithCSRF
 )
 
 @(
