APB-9746: Reorganize package structure for improved maintainability and readability
Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/register/BusinessTypePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/register/BusinessTypePage.scala.html
@@ -54,7 +54,7 @@
 
     <h2 class="govuk-caption-xl">@messages("about-application.title")</h2>
 
-    @formWithCSRF(action = routes.BusinessTypeController.submit) {
+    @formWithCSRF(action = uk.gov.hmrc.agentregistrationfrontend.controllers.aboutyourapplication.routes.BusinessTypeController.submit) {
         @govukRadios(Radios(
             fieldset = Some(Fieldset(
                 legend = Some(Legend(
