--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/register/CheckYourAnswerPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/register/CheckYourAnswerPage.scala.html
@@ -53,7 +53,7 @@
         actions = Some(Actions(
             items = Seq(
                 ActionItem(
-                    href = s"${routes.BusinessTypeController.show}",
+                    href = s"${uk.gov.hmrc.agentregistrationfrontend.controllers.aboutyourapplication.routes.BusinessTypeController.show}",
                     content = Text(messages(s"$key.change")),
                     visuallyHiddenText = Some(messages(s"$key.businessType.label"))
                 )
@@ -76,7 +76,7 @@
         actions = Some(Actions(
             items = Seq(
                 ActionItem(
-                    href = s"${routes.UserRoleController.show}",
+                    href = s"${uk.gov.hmrc.agentregistrationfrontend.controllers.aboutyourapplication.routes.UserRoleController.show}",
                     content = Text(messages(s"$key.change")),
                     visuallyHiddenText = Some(messages(s"$key.userRole.label"))
                 )
@@ -94,7 +94,7 @@
 
     @govukSummaryList(SummaryList(rows))
 
-    @formWithCSRF(action = routes.CheckYourAnswerController.submit) {
+    @formWithCSRF(action = uk.gov.hmrc.agentregistrationfrontend.controllers.aboutyourapplication.routes.CheckYourAnswerController.submit) {
         @govukButton(Button(
             content = Text(messages("common.confirmAndContinue"))
         ))
