APB-9751 improvements from PR comments

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/register/amls/AmlsExpiryDatePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/register/amls/AmlsExpiryDatePage.scala.html
@@ -16,6 +16,7 @@
 
 @import uk.gov.hmrc.agentregistration.shared.AmlsRegistrationNumber
 @import uk.gov.hmrc.agentregistrationfrontend.controllers.amls.routes
+@import uk.gov.hmrc.agentregistrationfrontend.forms.AmlsExpiryDateForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.register.partials.ContinueOrSaveForLater
 @import uk.gov.hmrc.govukfrontend.views.Implicits.*
@@ -38,7 +39,7 @@
         messages: Messages
 )
 
-@key = @{"amlsExpiryDate"}
+@key = @{AmlsExpiryDateForm.key}
 @pageTitle = @{messages(s"$key.title")}
     
 @layout(
