--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/register/amls/AmlsExpiryDatePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/register/amls/AmlsExpiryDatePage.scala.html
@@ -47,7 +47,7 @@
     maybeForm = Some(form)
 ) {
 
-    <h2 class="govuk-caption-xl">@messages("amlsDetails.title")</h2>
+    <h2 class="govuk-caption-l">@messages("amlsDetails.title")</h2>
     @formWithCSRF(action = routes.AmlsExpiryDateController.submit) {
         @govukDateInput(DateInput(
             id = key,
