--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/register/amls/AmlsSupervisoryBodyPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/register/amls/AmlsSupervisoryBodyPage.scala.html
@@ -49,7 +49,7 @@
     maybeForm = Some(form)
 ) {
 
-    <h2 class="govuk-caption-xl">@messages("amlsDetails.title")</h2>
+    <h2 class="govuk-caption-l">@messages("amlsDetails.title")</h2>
     @formWithCSRF(action = routes.AmlsSupervisorController.submit) {
 
         @govukSelect(Select(
