APB-9754 Amls CYA

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/register/amls/AmlsRegistrationNumberPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/register/amls/AmlsRegistrationNumberPage.scala.html
@@ -53,7 +53,7 @@
             label = Label(
                 content = Text(pageTitle),
                 isPageHeading = true,
-                classes = "govuk-label--xl"
+                classes = "govuk-label--l"
             ),
             classes = "govuk-!-width-one-half"
         ).withFormField(form(key)))
