--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/register/amls/AmlsSupervisoryBodyPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/register/amls/AmlsSupervisoryBodyPage.scala.html
@@ -58,7 +58,7 @@
             label = Label(
                 content = Text(pageTitle),
                 isPageHeading = true,
-                classes = "govuk-label--xl"
+                classes = "govuk-label--l"
             ),
             items = Seq(SelectItem(
                 value = Some(""),
